--- a/index.html
+++ b/index.html
@@ -3,3 +3,13 @@
 <!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->
 
 <!-- scripts.js قم بكتابة الكود المطلوب داخل ملف -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>Document</title>
+</head>
+<body>
+    <script src="./javascript/scripts.js"></script>
+</body>
+</html>
